--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "bio-photo.jpeg"
+  avatar           : "bio-photo.jpg"
   name             : "Wellington Amorim"
   pronouns         : "Ph.D."  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "welldm.santos@hotmail.com" 
 
   # Academic websites
   academia         : # URL
